# rocket-ws

./: Cargo.toml  README.md  e2.rs  event.rs  main.rs  message.rs  server.rs  session.rs
src/: dispatcher.rs  e1.rs  e2.rs  lib.rs  main.rs
src/api_user/: mod.rs
src/event/: mod.rs
src/notifier/: mod.rs
src/player/: mod.rs
src/settings/: auth.rs  db.rs  mod.rs  rd.rs  ws.rs
src/user/: cookie.rs  mod.rs
src/utils/: mod.rs
src/ws_server/: mod.rs  multicast.rs  server.rs
templates/: index.html.hbs
