[package]
name = "rocket-ws"
version = "0.1.0"
authors = ["elfhuv <elfhuv@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
ws = "0.9.1"
env_logger = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
r2d2_redis = "0.13.0"
redis = "0.15.1"
bson = "0.14.1"
crypto = "0.0.2"
log = "0.4.8"
config = "0.10.1"
walkdir = "2.3.1"
getopts = "0.2"
url = "2.1.1"
httparse = "1.3.4"
rust-crypto = "^0.2"
hex = "0.4.2"
sidekiq = "0.8.6"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json","handlebars_templates", "tera_templates"]